--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,17 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <!-- <include src="./partials/example.html"></include> -->
+
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button class="js-btn-search" type="submit">Search</button>
+    </form>
+    <div class="gallery"></div>
   </body>
 </html>
