--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,6 @@
       <button class="js-btn-search" type="submit">Search</button>
     </form>
     <div class="gallery"></div>
+    <button type="button" class="load-more is-hidden">Load more</button>
   </body>
 </html>
