--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,19 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
+    <div class="header">
+      <form class="search-form" id="search-form">
+        <input
+          class="input"
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button class="js-btn-search" type="submit">Search</button>
+      </form>
+    </div>
 
-    <form class="search-form" id="search-form">
-      <input
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button class="js-btn-search" type="submit">Search</button>
-    </form>
     <div class="gallery"></div>
     <button type="button" class="load-more is-hidden">Load more</button>
   </body>
