--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,12 @@
           autocomplete="off"
           placeholder="Search images..."
         />
-        <button class="js-btn-search" type="submit">Search</button>
+        <button class="js-btn-search btn-search" type="submit">Search</button>
       </form>
     </div>
-
-    <div class="gallery"></div>
-    <button type="button" class="load-more is-hidden">Load more</button>
+    <div class="container">
+      <div class="gallery"></div>
+      <button type="button" class="load-more is-hidden">Load more</button>
+    </div>
   </body>
 </html>
